--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №1</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework3/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-01" target="_blank">
               <img src="images/screenshot-1.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework3" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-01" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №2</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework3%20bonus/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-02" target="_blank">
               <img src="images/screenshot-2.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework3%20bonus" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-02" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №3</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework4/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-03" target="_blank">
               <img src="images/screenshot-3.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework4" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-03" target="_blank">код проекту</a>
           </div>
         </div>
       </div>
@@ -44,28 +44,28 @@
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №4</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework5/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-04" target="_blank">
               <img src="images/screenshot-4.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework5" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-04" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №5</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework6/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-05" target="_blank">
               <img src="images/screenshot-5.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework6" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-05" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №6</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework7-8_(bootstrap)/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-06" target="_blank">
               <img src="images/screenshot-6.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework7-8_(bootstrap)" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-06" target="_blank">код проекту</a>
           </div>
         </div>
       </div>
@@ -74,28 +74,28 @@
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №7</h5>
-            <a href="https://svystunstepan.github.io/test.app/homework9_(figma)/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-07" target="_blank">
               <img src="images/screenshot-7.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework9_(figma)" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-07" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №8</h5>
-            <a href="hhttps://svystunstepan.github.io/test.app/homework10/" target="_blank">
+            <a href="hhttps://svystunstepan.github.io/portfolio/project-08" target="_blank">
               <img src="images/screenshot-8.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/homework10" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №9</h5>
-            <a href="https://svystunstepan.github.io/test.app/panCredit/dist/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-09/dist/" target="_blank">
               <img src="images/screenshot-9.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/panCredit" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-09" target="_blank">код проекту</a>
           </div>
         </div>
       </div>
@@ -104,19 +104,19 @@
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №10</h5>
-            <a href="https://svystunstepan.github.io/test.app/urlaubsgl%C3%9Cck/dist/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-10/dist/" target="_blank">
               <img src="images/screenshot-10.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/test.app/tree/main/urlaubsgl%C3%9Cck" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-10" target="_blank">код проекту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №11</h5>
-            <a href="https://svystunstepan.github.io/freelance/SeaJetCar/dist/" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-11/dist/" target="_blank">
               <img src="images/screenshot-11.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/freelance/tree/master/SeaJetCar/dist" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-11" target="_blank">код проекту</a>
           </div>
         </div>
       </div>
