--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №1</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-01" target="_blank">
-              <img src="images/screenshot-1.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-1.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-01" target="_blank">код проекту</a>
           </div>
@@ -24,7 +24,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №2</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-02" target="_blank">
-              <img src="images/screenshot-2.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-2.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-02" target="_blank">код проекту</a>
           </div>
@@ -33,7 +33,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №3</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-03" target="_blank">
-              <img src="images/screenshot-3.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-3.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-03" target="_blank">код проекту</a>
           </div>
@@ -45,7 +45,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №4</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-04" target="_blank">
-              <img src="images/screenshot-4.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-4.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-04" target="_blank">код проекту</a>
           </div>
@@ -54,7 +54,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №5</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-05" target="_blank">
-              <img src="images/screenshot-5.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-5.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-05" target="_blank">код проекту</a>
           </div>
@@ -63,7 +63,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №6</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-06" target="_blank">
-              <img src="images/screenshot-6.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-6.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-06" target="_blank">код проекту</a>
           </div>
@@ -75,7 +75,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №7</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-07" target="_blank">
-              <img src="images/screenshot-7.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-7.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-07" target="_blank">код проекту</a>
           </div>
@@ -84,7 +84,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №8</h5>
             <a href="hhttps://svystunstepan.github.io/portfolio/project-08" target="_blank">
-              <img src="images/screenshot-8.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-8.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проекту</a>
           </div>
@@ -93,7 +93,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №9</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-09/dist/" target="_blank">
-              <img src="images/screenshot-9.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-9.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-09" target="_blank">код проекту</a>
           </div>
@@ -105,7 +105,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №10</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-10/dist/" target="_blank">
-              <img src="images/screenshot-10.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-10.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-10" target="_blank">код проекту</a>
           </div>
@@ -114,7 +114,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №11</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-11/dist/" target="_blank">
-              <img src="images/screenshot-11.webp" alt="">
+              <img src="https://github.com/SvystunStepan/test.app/tree/main/portfolio/dist/images/screenshot-11.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-11" target="_blank">код проекту</a>
           </div>
