--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>Portfolio</title>
-  <link type="text/css" rel="stylesheet" href="https://github.com/SvystunStepan/test.app/blob/main/portfolio/dist/css/app.css" />
-  
+  <link type="text/css" rel="stylesheet" href="css/app.css" />
 </head>
 <body> 
   <section>
