--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>Portfolio</title>
-  <link type="text/css" rel="stylesheet" href="css/app.css" />
+  <link type="text/css" rel="stylesheet" href="s-css/app.css" />
 </head>
 <body> 
   <section>
@@ -16,7 +16,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №11</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-11/dist/" target="_blank">
-              <img src="images/screenshot-11.webp" alt="">
+              <img src="s-images/screenshot-11.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-11" target="_blank">код проекту</a>
           </div>
@@ -25,7 +25,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №10</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-10/dist/" target="_blank">
-              <img src="images/screenshot-10.webp" alt="">
+              <img src="s-images/screenshot-10.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-10" target="_blank">код проекту</a>
           </div>
@@ -34,7 +34,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №9</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-09/dist/" target="_blank">
-              <img src="images/screenshot-9.webp" alt="">
+              <img src="s-images/screenshot-9.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-09" target="_blank">код проекту</a>
           </div>
@@ -46,7 +46,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №8</h5>
             <a href="hhttps://svystunstepan.github.io/portfolio/project-08" target="_blank">
-              <img src="images/screenshot-8.webp" alt="">
+              <img src="s-images/screenshot-8.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проекту</a>
           </div>
@@ -55,7 +55,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №7</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-07" target="_blank">
-              <img src="images/screenshot-7.webp" alt="">
+              <img src="s-images/screenshot-7.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-07" target="_blank">код проекту</a>
           </div>
@@ -64,7 +64,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №6</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-06" target="_blank">
-              <img src="images/screenshot-6.webp" alt="">
+              <img src="s-images/screenshot-6.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-06" target="_blank">код проекту</a>
           </div>
@@ -76,7 +76,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №5</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-05" target="_blank">
-              <img src="images/screenshot-5.webp" alt="">
+              <img src="s-images/screenshot-5.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-05" target="_blank">код проекту</a>
           </div>
@@ -85,7 +85,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №4</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-04" target="_blank">
-              <img src="images/screenshot-4.webp" alt="">
+              <img src="s-images/screenshot-4.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-04" target="_blank">код проекту</a>
           </div>
@@ -94,7 +94,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №3</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-03" target="_blank">
-              <img src="images/screenshot-3.webp" alt="">
+              <img src="s-images/screenshot-3.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-03" target="_blank">код проекту</a>
           </div>
@@ -106,7 +106,7 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №2</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-02" target="_blank">
-              <img src="images/screenshot-2.webp" alt="">
+              <img src="s-images/screenshot-2.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-02" target="_blank">код проекту</a>
           </div>
@@ -115,17 +115,12 @@
           <div class="block">
             <h5 class="title-img">Проєкт - №1</h5>
             <a href="https://svystunstepan.github.io/portfolio/project-01" target="_blank">
-              <img src="images/screenshot-1.webp" alt="">
+              <img src="s-images/screenshot-1.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-01" target="_blank">код проекту</a>
           </div>
         </div>
       </div>
-
-
-
-
-
 
       <h1 class="title">Контактні дані:</h1>
       <div class="row">
@@ -147,7 +142,7 @@
     </div>
   </section>
 
-  <script defer src="js/vendor.js"></script>
-  <script defer src="js/app.js"></script>
+  <script defer src="s-js/vendor.js"></script>
+  <script defer src="s-js/app.js"></script>
 </body>
 </html>
