--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col-md-4 py-4">
           <div class="block">
             <h5 class="title-img">Проєкт - №8</h5>
-            <a href="hhttps://svystunstepan.github.io/portfolio/project-08" target="_blank">
+            <a href="https://svystunstepan.github.io/portfolio/project-08" target="_blank">
               <img src="s-images/screenshot-8.webp" alt="">
             </a>
             <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проекту</a>
