--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <section>
     <div class="container">
       <h1 class="title">Портфоліо:</h1>
-
       <div class="row">
         <div class="col-md-4 py-4">
           <div class="block">
@@ -128,7 +127,7 @@
           <div class="contacts">
             <div class="name">Ім'я та прізвище: <span>Степан Свистун</span></div>
             <div class="email">Поштова скринька: <a href="mailto:s913ua@gmail.com">s913ua@gmailcom</a></div>
-            <div class="phone">Номер телефону: <a href="tell:380994712753">+38(099)4712753</a></div>
+            <div class="phone">Номер телефону: <a href="tell:380994712753">+38(099) 47 12 753</a></div>
             <div class="tg">Telegram: <a href="https://t.me/StepanSvystun" target="_blank">t.me/StepanSvystun</a></div>
             <div class="residence">Місто проживання: <span>м.Калуш, Івано-Франківська обл.</span>
               <div class="map py-3">
@@ -138,7 +137,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
