--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>Portfolio</title>
+  <link rel="icon" type="image/png" href="s-images/portfolio.png">
   <link type="text/css" rel="stylesheet" href="s-css/app.css" />
 </head>
 <body> 
