--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>Portfolio</title>
-  <link rel="icon" type="image/png" href="s-images/portfolio.png">
+  <link rel="icon" type="image/png" href="s-images/favicon.png">
   <link type="text/css" rel="stylesheet" href="s-css/app.css" />
 </head>
 <body> 
@@ -18,7 +18,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-11/dist/" target="_blank">
               <img src="s-images/screenshot-11.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-11/dist" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-11/dist" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -27,7 +27,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-10/dist/" target="_blank">
               <img src="s-images/screenshot-10.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-10/dist" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-10/dist" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -36,7 +36,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-09/dist/" target="_blank">
               <img src="s-images/screenshot-9.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-09/dist" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-09/dist" target="_blank">код проєкту</a>
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-08" target="_blank">
               <img src="s-images/screenshot-8.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-08" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -57,7 +57,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-07" target="_blank">
               <img src="s-images/screenshot-7.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-07" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-07" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -66,7 +66,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-06" target="_blank">
               <img src="s-images/screenshot-6.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-06" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-06" target="_blank">код проєкту</a>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-05" target="_blank">
               <img src="s-images/screenshot-5.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-05" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-05" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -87,7 +87,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-04" target="_blank">
               <img src="s-images/screenshot-4.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-04" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-04" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -96,7 +96,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-03" target="_blank">
               <img src="s-images/screenshot-3.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-03" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-03" target="_blank">код проєкту</a>
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-02" target="_blank">
               <img src="s-images/screenshot-2.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-02" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-02" target="_blank">код проєкту</a>
           </div>
         </div>
         <div class="col-md-4 py-4">
@@ -117,7 +117,7 @@
             <a href="https://svystunstepan.github.io/portfolio/project-01" target="_blank">
               <img src="s-images/screenshot-1.webp" alt="">
             </a>
-            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-01" target="_blank">код проекту</a>
+            <a class="link" href="https://github.com/SvystunStepan/portfolio/tree/main/project-01" target="_blank">код проєкту</a>
           </div>
         </div>
       </div>
